@@ -1768,8 +1768,8 @@ jtag_device_def_type deviceDefinitions[] = {
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
-	    0x00,	// ucIDRAddress
-	    0X00,	// ucSPMCRAddress
+	    0x31,	// ucIDRAddress
+	    0X57,	// ucSPMCRAddress
 	    0,	// ucRAMPZAddress
 	    fill_b2(128),	// uiFlashPageSize
 	    4,	// ucEepromPageSize
@@ -2599,8 +2599,8 @@ jtag_device_def_type deviceDefinitions[] = {
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
-	    0x00,	// ucIDRAddress
-	    0X00,	// ucSPMCRAddress
+	    0x27,	// ucIDRAddress
+	    0X57,	// ucSPMCRAddress
 	    0,	// ucRAMPZAddress
 	    fill_b2(32),	// uiFlashPageSize
 	    4,	// ucEepromPageSize
@@ -2663,8 +2663,8 @@ jtag_device_def_type deviceDefinitions[] = {
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
-	    0x00,	// ucIDRAddress
-	    0X00,	// ucSPMCRAddress
+	    0x27,	// ucIDRAddress
+	    0X57,	// ucSPMCRAddress
 	    0,	// ucRAMPZAddress
 	    fill_b2(64),	// uiFlashPageSize
 	    4,	// ucEepromPageSize
@@ -2727,8 +2727,8 @@ jtag_device_def_type deviceDefinitions[] = {
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
-	    0x00,	// ucIDRAddress
-	    0X00,	// ucSPMCRAddress
+	    0x27,	// ucIDRAddress
+	    0X57,	// ucSPMCRAddress
 	    0,	// ucRAMPZAddress
 	    fill_b2(64),	// uiFlashPageSize
 	    4,	// ucEepromPageSize
@@ -4115,8 +4115,8 @@ jtag_device_def_type deviceDefinitions[] = {
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
-	    0x00,	// ucIDRAddress
-	    0X00,	// ucSPMCRAddress
+	    0x31,	// ucIDRAddress
+	    0X57,	// ucSPMCRAddress
 	    0,	// ucRAMPZAddress
 	    fill_b2(128),	// uiFlashPageSize
 	    4,	// ucEepromPageSize
@@ -4491,8 +4491,8 @@ jtag_device_def_type deviceDefinitions[] = {
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
-	    0x00,	// ucIDRAddress
-	    0X00,	// ucSPMCRAddress
+	    0x31,	// ucIDRAddress
+	    0X57,	// ucSPMCRAddress
 	    0,	// ucRAMPZAddress
 	    fill_b2(64),	// uiFlashPageSize
 	    4,	// ucEepromPageSize
@@ -4617,8 +4617,8 @@ jtag_device_def_type deviceDefinitions[] = {
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
-	    0x00,	// ucIDRAddress
-	    0X00,	// ucSPMCRAddress
+	    0x31,	// ucIDRAddress
+	    0X57,	// ucSPMCRAddress
 	    0,	// ucRAMPZAddress
 	    fill_b2(64),	// uiFlashPageSize
 	    4,	// ucEepromPageSize
